force-app/main/default/objects/recTypesVer__c/recTypesVer__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Record Types - Verification</label>
</CustomObject>