force-app/main/default/objects/recTypesVer__c/fields/Bank_Account_Evidence_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Evidence_Read_Only__c</fullName>
    <label>Bank Account Evidence Read Only</label>
    <length>18</length>
    <type>Text</type>
</CustomField>