force-app/main/default/objects/recTypesVer__c/fields/Beneficial_Owner_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Evidence__c</fullName>
    <label>Beneficial Owner Evidence</label>
    <length>18</length>
    <type>Text</type>
</CustomField>