force-app/main/default/objects/recTypesVer__c/fields/Company_Information_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Company_Information_Evidence__c</fullName>
    <label>Company Information Evidence</label>
    <length>18</length>
    <type>Text</type>
</CustomField>