force-app/main/default/objects/recTypesVer__c/fields/Director_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Director_Evidence__c</fullName>
    <label>Director Evidence</label>
    <length>18</length>
    <type>Text</type>
</CustomField>